# TalentMatchAI

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main-publish.yml  test-ci.yml
scripts/: init.sh
tamatai/: app.py  config.py  logging.py
tamatai/agent/: match.py  middleware.py
tamatai/chain/: helper.py  match.py
tests/: conftest.py  test_helper.py  test_match.py
