[project]
name = "tamatai"
version = "0.1.5"
description = ""
authors = [
    {name = "aditya624",email = "adityaadit677@gmail.com"}
]
readme = "README.md"
packages = [{include = "tamatai"}]
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=1.1)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langfuse (>=3.9.1,<4.0.0)",
    "langchain-groq (==1.0.0)",
    "langchain-openai (>=1.1.0,<2.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "streamlit[pdf] (>=1.51.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["."]
include = ["tamatai"]
namespaces = false
